fixed wrapping

--- a/client/src/styles/chat.css
+++ b/client/src/styles/chat.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow-x: hidden;
     min-width: 180px;
     color: rgba(0,0,0,.87);
     background-color: #fff;
@@ -48,6 +49,7 @@
     touch-action: none;
     position: relative;
     height: 100%;
+    width: 100%;
     overflow: auto !important;
     box-sizing: border-box;
     top: 0;
@@ -55,53 +57,53 @@
     right: 0;
     bottom: 0;
     padding: 0 1.2em 0 0.8em;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
 
 .messageListScrollbar::-webkit-scrollbar {
     display: none;
 }
 
-.messageIncoming{
+.codeBlock, .messageIncoming, .messageOutgoing, .welcomeMessage{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     border-top: black 1px solid;
     background-color: white;
     margin-bottom: 0px;
     padding: 20px;
+    word-wrap: break-word;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.codeBlock pre, .codeBlock code {
+    white-space: pre-wrap !important;
+    word-wrap: break-word !important;
+    overflow-wrap: break-word !important;
+}
+
+.messageIncoming{
+    flex-direction: row;
 }
 
 .messageOutgoing{
-    display: flex;
-    flex-direction: column;
     text-align: right;
-    background-color: white;
-    margin-bottom: 0px;
-    padding: 20px;
     border-style: solid;
     border-image: linear-gradient(to right, white, #225633, white) 1;
-    white-space: pre-wrap;
 }
 
 .messageAvatar{
-    float: left; 
-    width: 50px; 
-    height: 50px; 
+    float: left;
+    width: 50px;
+    height: 50px;
     margin-right: 10px;
-    border-radius: 50%; 
+    border-radius: 50%;
 }
 
 .welcomeMessage{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    background-color: white;
-    margin-bottom: 0px;
-    padding: 20px;
-    white-space: pre-wrap;
-    border: black 1px solid;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
@@ -148,16 +150,16 @@
     content: "\2026";
     /* ascii code for the ellipsis character */
     width: 0px;
-  }
-  
-  @keyframes ellipsis {
+}
+
+@keyframes ellipsis {
     to {
-      width: 40px;
+        width: 40px;
     }
-  }
-  
-  @-webkit-keyframes ellipsis {
+}
+
+@-webkit-keyframes ellipsis {
     to {
-      width: 40px;
+        width: 40px;
     }
-  }
+}
